--- a/lib-multishoot-camera/src/main/AndroidManifest.xml
+++ b/lib-multishoot-camera/src/main/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sfexpress.multishootcamera">
+    package="com.hosle.multishootcamera">
 
     <application
         android:allowBackup="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".CameraActivity"
+            android:name="com.hosle.multishootcamera.CameraActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppThemeNoActionBar" />
         <activity
-            android:name=".UploadActivity"
+            android:name="com.hosle.multishootcamera.UploadActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppThemeNoActionBar" />
     </application>
