--- a/lib-multishoot-camera/build.gradle
+++ b/lib-multishoot-camera/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -32,6 +32,10 @@ android {
 
     androidExtensions{
         experimental = true
+    }
+
+    lintOptions {
+        abortOnError false
     }
 
 }
